[gd_scene load_steps=2 format=3 uid="uid://cwms5tpukff7t"]

[ext_resource type="Script" uid="uid://df7idmhpu0xbb" path="res://scenes/main-menu/user_options.gd" id="1_w6jiu"]

[node name="UserOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6jiu")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayModeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Display Mode"

[node name="DisplayModeButton" type="OptionButton" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Back"

[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/VBoxContainer/DisplayModeButton" to="." method="_on_display_mode_button_item_selected"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
